Published multiple files

--- a/src/site/notes/About Human Thought/의식은 어디에서 시작되었을까.md
+++ b/src/site/notes/About Human Thought/의식은 어디에서 시작되었을까.md
@@ -3,7 +3,7 @@
 ---
 
 
-[[생각하는 모든 것은 욕망이다.\|생각하는 모든 것은 욕망이다.]]
+[[= My Brain/본연의 사건/생각하는 모든 것은 욕망이다.\|생각하는 모든 것은 욕망이다.]]
 [[= My Brain/본연의 사건/언어모델이 할루시네이션을 일으키는 이유\|언어모델이 할루시네이션을 일으키는 이유]]
 
 의식은 무의식의 확장이다.
@@ -44,7 +44,7 @@
 # 결론
 욕망을 가진 존재로서 자연은 거대한 문제이며, 문제를 해결하기 위해 고민하고 발전하는 과정에서 감각이 발달하고, 지각을 기억하고, 지각을 해석하고(내면세계), 그러한 과정에서 다른 에이젠트와 협력하는(공감능력) 등의 발전을 하였다. 의식은 복잡한 현실세계를 바라보는 내면세계로서 이러한 진화의 산물이다.
 
-인공지능이 의식을 갖기 위해선, 인공지능의 내면 세계를 여러 계층으로 모델링할 필요가 있다. [[= My Brain/본연의 사건/AI응용) 인공지능 npc를 통한 삶 구현\|AI응용) 인공지능 npc를 통한 삶 구현]]에서 해당 방법을 구체화할 방안에 대해 다룬다.
+인공지능이 의식을 갖기 위해선, 인공지능의 내면 세계를 여러 계층으로 모델링할 필요가 있다. [[= My Brain/AI 응용/AI응용) 인공지능 npc를 통한 삶 구현\|AI응용) 인공지능 npc를 통한 삶 구현]]에서 해당 방법을 구체화할 방안에 대해 다룬다.
 
 
 ---
