Published multiple files

--- a/src/site/notes/About Human Thought/의식은 어디에서 시작되었을까.md
+++ b/src/site/notes/About Human Thought/의식은 어디에서 시작되었을까.md
@@ -3,7 +3,7 @@
 ---
 
 
-[[= My Brain/본연의 사건/생각하는 모든 것은 욕망이다.\|생각하는 모든 것은 욕망이다.]]
+[[생각하는 모든 것은 욕망이다.\|생각하는 모든 것은 욕망이다.]]
 [[= My Brain/본연의 사건/언어모델이 할루시네이션을 일으키는 이유\|언어모델이 할루시네이션을 일으키는 이유]]
 
 의식은 무의식의 확장이다.
